# alcove

./: .gitignore  AGENTS.md  BENCHMARK.md  CHANGELOG.md  Cargo.toml  Makefile  README.md  ROADMAP.md  dist-workspace.toml  glama.json  smithery.yaml
.agents/plugins/: marketplace.json
.antigravity-plugin/: hooks.json  plugin.json
.antigravity-plugin/hooks/: install.js
.cargo/: config.toml
.claude-plugin/: hooks.json  marketplace.json  plugin.json
.codex-plugin/: hooks.json  plugin.json
.gemini/: mcp_config.json  plugin.json
.github/workflows/: ci.yml  publish-crates.yml  release.yml
.well-known/mcp/: server-card.json
benches/: baseline.json  ground_truth.toml
benches/corpus/: baseline.json  ground_truth.toml
benches/corpus/data-pipeline/: ARCHITECTURE.md  PRD.md  RUNBOOK.md
benches/corpus/eval-project/: ARCHITECTURE.md  BENCHMARK.md  CODE_INDEX.md  CONVENTIONS.md  DECISIONS.md  DEPLOYMENT.md  PRD.md  PROGRESS.md  SECRETS_MAP.md  VALUATION.md
benches/corpus/korean-docs/: ARCHITECTURE.md  BENCHMARK.md  PRD.md
benches/corpus/web-platform/: ARCHITECTURE.md  PRD.md  PROGRESS.md
benches/results/: 2026-05-19.md  2026-05-19T032253-precision.md  2026-05-19T032450-latency.md
colletdocs/analysis/: rag-evaluation.md
docs/: CONTEXT_COMPACTION_RESEARCH.md  EMBEDDING_MODELS.md  README.de.md  README.es.md  README.fr.md  README.hi.md  README.ja.md  README.ko.md  README.pt-BR.md  README.ru.md  README.zh-CN.md
hooks/: hooks.json  install.js  setup.sh
integrations/antigravity/: hooks.json
integrations/antigravity/hooks/: install.cjs
locales/: de.toml  en.toml  es.toml  fr.toml  hi.toml  ja.toml  ko.toml  pt-BR.toml  ru.toml  zh-CN.toml
registry/scripts/: install.cjs  install.js
registry/scripts/shared/: install-core.cjs
registry/skills/alcove/: SKILL.md
scripts/: install.ps1  install.sh
skill/: SKILL.md
skills/alcove/: SKILL.md
src/: agents.rs  bench.rs  cli.rs  code_index.rs  commands.rs  config.rs  embedding.rs  embedding_cache.rs  index.rs  launchd.rs  lib.rs  lint.rs  main.rs  mcp.rs  platform.rs  policy.rs  promote.rs  rest_routes.rs  server.rs  telemetry.rs  tools.rs  transpile.rs  vault.rs  vector.rs
src/code_index/: detection.rs  markdown.rs  mod.rs  registry.rs  walker.rs
src/code_index/languages/: c.rs  cpp.rs  csharp.rs  go.rs  java.rs  javascript.rs  kotlin.rs  mod.rs  python.rs  ruby.rs  rust.rs  swift.rs  typescript.rs
src/index/: builder.rs  cache.rs  chunker.rs  frontmatter.rs  lock.rs  mod.rs  reader.rs  schema.rs  searcher.rs
src/setup/: mod.rs
tests/: bench.rs
