[package]
name = "alcove"
version = "0.7.10"
edition = "2024"
description = "A quiet place for your project docs. MCP server that gives AI agents scoped access to private documentation."
license = "Apache-2.0"
repository = "https://github.com/epicsagas/alcove"
keywords = ["mcp", "documentation", "ai", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "alcove"
path = "src/main.rs"

[lib]
name = "alcove"
path = "src/lib.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ name }{ binary-ext }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-fmt = "zip"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.12", features = ["fuzzy-select"] }
console = "0.16"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1"
walkdir = "2"
rust-i18n = "3.1.5"
sys-locale = "0.3.2"
tantivy = "0.26"

# alcove-full feature dependencies (lazy embedding + vector search)
fastembed = { version = "5", optional = true }
rusqlite = { version = "0.39", optional = true }

# HTTP server dependencies (alcove-server feature)
axum = { version = "0.8", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }

# HNSW vector indexing (alcove-full feature)
hnsw_rs = { version = "0.3", optional = true }

[features]
default = []
alcove-full = ["fastembed", "rusqlite", "hnsw_rs"]
alcove-server = ["axum", "tokio", "tower-http"]
full = ["alcove-full", "alcove-server"]

[dev-dependencies]
tempfile = "3.26.0"
